# wgs_pipelines

./: README.md
db/api/: README.md  pyproject.toml
db/api/src/genomicsapi/: inserts.py  select.py  update.py
db/schema/: schema.sql
gatk_bestpractices_mapping/: Snakefile  config.yaml  runner.py
gatk_bestpractices_mapping/lib/: endpoints.py
gatk_bestpractices_mapping/scripts/: mark_complete.py
gatk_bestpractices_mapping/snakemake_modules/: db_deps.py
gatk_bestpractices_mapping/snakemake_modules/fastq_modules/: ega.smk  external_bam.smk  prep_external_bam.smk  sra.smk
gatk_bestpractices_mapping/snakemake_modules/mutect_cellline/: MUTECT2.smk  MUTECT2_PARENTAL.smk  PROCESS_FILTER_M2.smk  mutect.smk
gatk_bestpractices_mapping/snakemake_modules/mutect_cellline/scripts/: cellline_vcf.py  filter_mutations.R
gatk_bestpractices_mapping/snakemake_modules/wgs_alignment/: rules.smk
