[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genomicsapi"
version = "0.0.1"
authors = [
  { name="Luka Culibrk", email="luculibrk@gmail.com" },
]
description = "General purpose API for interacting with a database tracking genomics metadata"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lculibrk/wgs_pipelines/"
Issues = "https://github.com/lculibrk/wgs_pipelines/"
